TituloOmdb record converted for class